--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>djfjjfjfjf</h1><h1>djfjjfjfjf</h1><h1>djfjjfjfjf</h1><div>deneme</div>
+    <h1>meryem</h1><h1>aslan</h1><h1>djfjjfjfjf</h1><div>deneme</div>
 </body>
 
 </html>
